--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,19 @@
 VC templates 
 Product Gallery options(carousel -> left or right or bottom)
+
+
+
+if ( ! defined( 'ABSPATH' ) ) {
+	exit; // Exit if accessed directly.
+}
+
+add_filter( 'template_include', 'lv_template_loader',99,1);
+function lv_template_loader($template){
+	if ( is_single() && get_post_type() == 'product' ) {
+		print_r($template);
+		$dir = plugin_dir_path( __FILE__ );
+		$template = $dir."single-product.php";
+		print_r($template);
+	}
+	return $template;	
+}
